fir/fir_parser.output
Terminals unused in grammar

    tREQUIRE


Grammar

    0 $accept: file $end

    1 file: declarations

    2 declarations: declaration
    3             | declarations declaration

    4 declaration: variable ';'
    5            | function

    6 variable: data_type '*' tIDENTIFIER opt_initializer
    7         | data_type tIDENTIFIER opt_initializer
    8         | data_type '?' tIDENTIFIER

    9 variables: variable ';'
   10          | variables variable ';'

   11 opt_variables: %empty
   12              | variables

   13 opt_initializer: %empty
   14                | '=' expression

   15 function: func_decl
   16         | func_def

   17 func_decl: data_type '*' tIDENTIFIER '(' args ')'
   18          | data_type tIDENTIFIER '(' args ')'
   19          | data_type '?' tIDENTIFIER '(' args ')'
   20          | tTYPE_VOID '*' tIDENTIFIER '(' args ')'
   21          | tTYPE_VOID tIDENTIFIER '(' args ')'
   22          | tTYPE_VOID '?' tIDENTIFIER '(' args ')'

   23 func_def: data_type '*' tIDENTIFIER '(' args ')' def_ret_val body
   24         | data_type tIDENTIFIER '(' args ')' def_ret_val body
   25         | data_type '*' tIDENTIFIER '(' args ')' body
   26         | data_type tIDENTIFIER '(' args ')' body
   27         | tTYPE_VOID '*' tIDENTIFIER '(' args ')' body
   28         | tTYPE_VOID tIDENTIFIER '(' args ')' body

   29 args: %empty
   30     | arg
   31     | args ',' arg

   32 arg: data_type tIDENTIFIER

   33 def_ret_val: tRET_VAL literal

   34 literal: integer
   35        | float
   36        | string
   37        | tNULL

   38 body: prologue
   39     | block
   40     | epilogue
   41     | prologue block
   42     | prologue epilogue
   43     | block epilogue
   44     | prologue block epilogue

   45 prologue: '@' block

   46 epilogue: tEPILOGUE block

   47 block: '{' opt_variables opt_instructions '}'

   48 instruction: tIF expression tTHEN instruction
   49            | tIF expression tTHEN instruction tELSE instruction
   50            | tWHILE expression tDO instruction
   51            | tWHILE expression tDO instruction tFINALLY instruction
   52            | expression ';'
   53            | tWRITE expressions ';'
   54            | tWRITELN expressions ';'
   55            | tLEAVE ';'
   56            | tLEAVE tINTEGER ';'
   57            | tRESTART ';'
   58            | tRESTART tINTEGER ';'
   59            | tRETURN
   60            | block

   61 instructions: instruction
   62             | instructions instruction

   63 opt_instructions: %empty
   64                 | instructions

   65 data_type: tTYPE_STRING
   66          | tTYPE_INT
   67          | tTYPE_FLOAT
   68          | '<' data_type '>'

   69 integer: tINTEGER

   70 float: tFLOAT

   71 string: tSTRING
   72       | string tSTRING

   73 expression: literal
   74           | '(' expression ')'
   75           | '[' expression ']'
   76           | '+' expression
   77           | '-' expression
   78           | lvalue '?'
   79           | expression '*' expression
   80           | expression '/' expression
   81           | expression '%' expression
   82           | expression '+' expression
   83           | expression '-' expression
   84           | expression '<' expression
   85           | expression '>' expression
   86           | expression tLE expression
   87           | expression tGE expression
   88           | expression tEQ expression
   89           | expression tNE expression
   90           | '~' expression
   91           | expression tAND expression
   92           | expression tOR expression
   93           | lvalue '=' expression
   94           | lvalue
   95           | tIDENTIFIER '(' ')'
   96           | tIDENTIFIER '(' expressions ')'
   97           | '@'
   98           | tSIZEOF '(' expression ')'

   99 expressions: expression
  100            | expressions ',' expression

  101 lvalue: tIDENTIFIER
  102       | expression '[' expression ']'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 81
    '(' (40) 17 18 19 20 21 22 23 24 25 26 27 28 74 95 96 98
    ')' (41) 17 18 19 20 21 22 23 24 25 26 27 28 74 95 96 98
    '*' (42) 6 17 20 23 25 27 79
    '+' (43) 76 82
    ',' (44) 31 100
    '-' (45) 77 83
    '/' (47) 80
    ';' (59) 4 9 10 52 53 54 55 56 57 58
    '<' (60) 68 84
    '=' (61) 14 93
    '>' (62) 68 85
    '?' (63) 8 19 22 78
    '@' (64) 45 97
    '[' (91) 75 102
    ']' (93) 75 102
    '{' (123) 47
    '}' (125) 47
    '~' (126) 90
    error (256)
    tTYPE_INT (258) 66
    tTYPE_FLOAT (259) 67
    tTYPE_STRING (260) 65
    tTYPE_VOID (261) 20 21 22 27 28
    tSIZEOF (262) 98
    tREQUIRE (263)
    tIF (264) 48 49
    tTHEN (265) 48 49
    tELSE (266) 49
    tWHILE (267) 50 51
    tDO (268) 50 51
    tFINALLY (269) 51
    tLEAVE (270) 55 56
    tRESTART (271) 57 58
    tGE (272) 87
    tLE (273) 86
    tEQ (274) 88
    tNE (275) 89
    tAND (276) 91
    tOR (277) 92
    tRETURN (278) 59
    tWRITE (279) 53
    tWRITELN (280) 54
    tRET_VAL (281) 33
    tEPILOGUE (282) 46
    tINTEGER <i> (283) 56 58 69
    tFLOAT <d> (284) 70
    tIDENTIFIER <s> (285) 6 7 8 17 18 19 20 21 22 23 24 25 26 27 28 32 95 96 101
    tSTRING <s> (286) 71 72
    tNULL <expression> (287) 37
    tUNARY (288)


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    file <sequence> (54)
        on left: 1
        on right: 0
    declarations <sequence> (55)
        on left: 2 3
        on right: 1 3
    declaration <node> (56)
        on left: 4 5
        on right: 2 3
    variable <node> (57)
        on left: 6 7 8
        on right: 4 9 10
    variables <sequence> (58)
        on left: 9 10
        on right: 10 12
    opt_variables <sequence> (59)
        on left: 11 12
        on right: 47
    opt_initializer <expression> (60)
        on left: 13 14
        on right: 6 7
    function <node> (61)
        on left: 15 16
        on right: 5
    func_decl <node> (62)
        on left: 17 18 19 20 21 22
        on right: 15
    func_def <node> (63)
        on left: 23 24 25 26 27 28
        on right: 16
    args <sequence> (64)
        on left: 29 30 31
        on right: 17 18 19 20 21 22 23 24 25 26 27 28 31
    arg <node> (65)
        on left: 32
        on right: 30 31
    def_ret_val <expression> (66)
        on left: 33
        on right: 23 24
    literal <expression> (67)
        on left: 34 35 36 37
        on right: 33 73
    body <body> (68)
        on left: 38 39 40 41 42 43 44
        on right: 23 24 25 26 27 28
    prologue <prologue> (69)
        on left: 45
        on right: 38 41 42 44
    epilogue <block> (70)
        on left: 46
        on right: 40 42 43 44
    block <block> (71)
        on left: 47
        on right: 39 41 43 44 45 46 60
    instruction <node> (72)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 48 49 50 51 61 62
    instructions <sequence> (73)
        on left: 61 62
        on right: 62 64
    opt_instructions <sequence> (74)
        on left: 63 64
        on right: 47
    data_type <type> (75)
        on left: 65 66 67 68
        on right: 6 7 8 17 18 19 23 24 25 26 32 68
    integer <expression> (76)
        on left: 69
        on right: 34
    float <expression> (77)
        on left: 70
        on right: 35
    string <s> (78)
        on left: 71 72
        on right: 36 72
    expression <expression> (79)
        on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
        on right: 14 48 49 50 51 52 74 75 76 77 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 98 99 100 102
    expressions <sequence> (80)
        on left: 99 100
        on right: 53 54 96 100
    lvalue <lvalue> (81)
        on left: 101 102
        on right: 78 93 94


State 0

    0 $accept: • file $end

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_VOID    shift, and go to state 4
    '<'           shift, and go to state 5

    file          go to state 6
    declarations  go to state 7
    declaration   go to state 8
    variable      go to state 9
    function      go to state 10
    func_decl     go to state 11
    func_def      go to state 12
    data_type     go to state 13


State 1

   66 data_type: tTYPE_INT •

    $default  reduce using rule 66 (data_type)


State 2

   67 data_type: tTYPE_FLOAT •

    $default  reduce using rule 67 (data_type)


State 3

   65 data_type: tTYPE_STRING •

    $default  reduce using rule 65 (data_type)


State 4

   20 func_decl: tTYPE_VOID • '*' tIDENTIFIER '(' args ')'
   21          | tTYPE_VOID • tIDENTIFIER '(' args ')'
   22          | tTYPE_VOID • '?' tIDENTIFIER '(' args ')'
   27 func_def: tTYPE_VOID • '*' tIDENTIFIER '(' args ')' body
   28         | tTYPE_VOID • tIDENTIFIER '(' args ')' body

    tIDENTIFIER  shift, and go to state 14
    '*'          shift, and go to state 15
    '?'          shift, and go to state 16


State 5

   68 data_type: '<' • data_type '>'

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    data_type  go to state 17


State 6

    0 $accept: file • $end

    $end  shift, and go to state 18


State 7

    1 file: declarations •
    3 declarations: declarations • declaration

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_VOID    shift, and go to state 4
    '<'           shift, and go to state 5

    $default  reduce using rule 1 (file)

    declaration  go to state 19
    variable     go to state 9
    function     go to state 10
    func_decl    go to state 11
    func_def     go to state 12
    data_type    go to state 13


State 8

    2 declarations: declaration •

    $default  reduce using rule 2 (declarations)


State 9

    4 declaration: variable • ';'

    ';'  shift, and go to state 20


State 10

    5 declaration: function •

    $default  reduce using rule 5 (declaration)


State 11

   15 function: func_decl •

    $default  reduce using rule 15 (function)


State 12

   16 function: func_def •

    $default  reduce using rule 16 (function)


State 13

    6 variable: data_type • '*' tIDENTIFIER opt_initializer
    7         | data_type • tIDENTIFIER opt_initializer
    8         | data_type • '?' tIDENTIFIER
   17 func_decl: data_type • '*' tIDENTIFIER '(' args ')'
   18          | data_type • tIDENTIFIER '(' args ')'
   19          | data_type • '?' tIDENTIFIER '(' args ')'
   23 func_def: data_type • '*' tIDENTIFIER '(' args ')' def_ret_val body
   24         | data_type • tIDENTIFIER '(' args ')' def_ret_val body
   25         | data_type • '*' tIDENTIFIER '(' args ')' body
   26         | data_type • tIDENTIFIER '(' args ')' body

    tIDENTIFIER  shift, and go to state 21
    '*'          shift, and go to state 22
    '?'          shift, and go to state 23


State 14

   21 func_decl: tTYPE_VOID tIDENTIFIER • '(' args ')'
   28 func_def: tTYPE_VOID tIDENTIFIER • '(' args ')' body

    '('  shift, and go to state 24


State 15

   20 func_decl: tTYPE_VOID '*' • tIDENTIFIER '(' args ')'
   27 func_def: tTYPE_VOID '*' • tIDENTIFIER '(' args ')' body

    tIDENTIFIER  shift, and go to state 25


State 16

   22 func_decl: tTYPE_VOID '?' • tIDENTIFIER '(' args ')'

    tIDENTIFIER  shift, and go to state 26


State 17

   68 data_type: '<' data_type • '>'

    '>'  shift, and go to state 27


State 18

    0 $accept: file $end •

    $default  accept


State 19

    3 declarations: declarations declaration •

    $default  reduce using rule 3 (declarations)


State 20

    4 declaration: variable ';' •

    $default  reduce using rule 4 (declaration)


State 21

    7 variable: data_type tIDENTIFIER • opt_initializer
   18 func_decl: data_type tIDENTIFIER • '(' args ')'
   24 func_def: data_type tIDENTIFIER • '(' args ')' def_ret_val body
   26         | data_type tIDENTIFIER • '(' args ')' body

    '='  shift, and go to state 28
    '('  shift, and go to state 29

    $default  reduce using rule 13 (opt_initializer)

    opt_initializer  go to state 30


State 22

    6 variable: data_type '*' • tIDENTIFIER opt_initializer
   17 func_decl: data_type '*' • tIDENTIFIER '(' args ')'
   23 func_def: data_type '*' • tIDENTIFIER '(' args ')' def_ret_val body
   25         | data_type '*' • tIDENTIFIER '(' args ')' body

    tIDENTIFIER  shift, and go to state 31


State 23

    8 variable: data_type '?' • tIDENTIFIER
   19 func_decl: data_type '?' • tIDENTIFIER '(' args ')'

    tIDENTIFIER  shift, and go to state 32


State 24

   21 func_decl: tTYPE_VOID tIDENTIFIER '(' • args ')'
   28 func_def: tTYPE_VOID tIDENTIFIER '(' • args ')' body

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 29 (args)

    args       go to state 33
    arg        go to state 34
    data_type  go to state 35


State 25

   20 func_decl: tTYPE_VOID '*' tIDENTIFIER • '(' args ')'
   27 func_def: tTYPE_VOID '*' tIDENTIFIER • '(' args ')' body

    '('  shift, and go to state 36


State 26

   22 func_decl: tTYPE_VOID '?' tIDENTIFIER • '(' args ')'

    '('  shift, and go to state 37


State 27

   68 data_type: '<' data_type '>' •

    $default  reduce using rule 68 (data_type)


State 28

   14 opt_initializer: '=' • expression

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 54
    lvalue      go to state 55


State 29

   18 func_decl: data_type tIDENTIFIER '(' • args ')'
   24 func_def: data_type tIDENTIFIER '(' • args ')' def_ret_val body
   26         | data_type tIDENTIFIER '(' • args ')' body

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 29 (args)

    args       go to state 56
    arg        go to state 34
    data_type  go to state 35


State 30

    7 variable: data_type tIDENTIFIER opt_initializer •

    $default  reduce using rule 7 (variable)


State 31

    6 variable: data_type '*' tIDENTIFIER • opt_initializer
   17 func_decl: data_type '*' tIDENTIFIER • '(' args ')'
   23 func_def: data_type '*' tIDENTIFIER • '(' args ')' def_ret_val body
   25         | data_type '*' tIDENTIFIER • '(' args ')' body

    '='  shift, and go to state 28
    '('  shift, and go to state 57

    $default  reduce using rule 13 (opt_initializer)

    opt_initializer  go to state 58


State 32

    8 variable: data_type '?' tIDENTIFIER •
   19 func_decl: data_type '?' tIDENTIFIER • '(' args ')'

    '('  shift, and go to state 59

    $default  reduce using rule 8 (variable)


State 33

   21 func_decl: tTYPE_VOID tIDENTIFIER '(' args • ')'
   28 func_def: tTYPE_VOID tIDENTIFIER '(' args • ')' body
   31 args: args • ',' arg

    ')'  shift, and go to state 60
    ','  shift, and go to state 61


State 34

   30 args: arg •

    $default  reduce using rule 30 (args)


State 35

   32 arg: data_type • tIDENTIFIER

    tIDENTIFIER  shift, and go to state 62


State 36

   20 func_decl: tTYPE_VOID '*' tIDENTIFIER '(' • args ')'
   27 func_def: tTYPE_VOID '*' tIDENTIFIER '(' • args ')' body

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 29 (args)

    args       go to state 63
    arg        go to state 34
    data_type  go to state 35


State 37

   22 func_decl: tTYPE_VOID '?' tIDENTIFIER '(' • args ')'

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 29 (args)

    args       go to state 64
    arg        go to state 34
    data_type  go to state 35


State 38

   98 expression: tSIZEOF • '(' expression ')'

    '('  shift, and go to state 65


State 39

   69 integer: tINTEGER •

    $default  reduce using rule 69 (integer)


State 40

   70 float: tFLOAT •

    $default  reduce using rule 70 (float)


State 41

   95 expression: tIDENTIFIER • '(' ')'
   96           | tIDENTIFIER • '(' expressions ')'
  101 lvalue: tIDENTIFIER •

    '('  shift, and go to state 66

    $default  reduce using rule 101 (lvalue)


State 42

   71 string: tSTRING •

    $default  reduce using rule 71 (string)


State 43

   37 literal: tNULL •

    $default  reduce using rule 37 (literal)


State 44

   90 expression: '~' • expression

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 67
    lvalue      go to state 55


State 45

   76 expression: '+' • expression

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 68
    lvalue      go to state 55


State 46

   77 expression: '-' • expression

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 69
    lvalue      go to state 55


State 47

   75 expression: '[' • expression ']'

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 70
    lvalue      go to state 55


State 48

   74 expression: '(' • expression ')'

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 71
    lvalue      go to state 55


State 49

   97 expression: '@' •

    $default  reduce using rule 97 (expression)


State 50

   73 expression: literal •

    $default  reduce using rule 73 (expression)


State 51

   34 literal: integer •

    $default  reduce using rule 34 (literal)


State 52

   35 literal: float •

    $default  reduce using rule 35 (literal)


State 53

   36 literal: string •
   72 string: string • tSTRING

    tSTRING  shift, and go to state 72

    $default  reduce using rule 36 (literal)


State 54

   14 opt_initializer: '=' expression •
   79 expression: expression • '*' expression
   80           | expression • '/' expression
   81           | expression • '%' expression
   82           | expression • '+' expression
   83           | expression • '-' expression
   84           | expression • '<' expression
   85           | expression • '>' expression
   86           | expression • tLE expression
   87           | expression • tGE expression
   88           | expression • tEQ expression
   89           | expression • tNE expression
   91           | expression • tAND expression
   92           | expression • tOR expression
  102 lvalue: expression • '[' expression ']'

    tGE   shift, and go to state 73
    tLE   shift, and go to state 74
    tEQ   shift, and go to state 75
    tNE   shift, and go to state 76
    tAND  shift, and go to state 77
    tOR   shift, and go to state 78
    '<'   shift, and go to state 79
    '>'   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '%'   shift, and go to state 85
    '['   shift, and go to state 86

    $default  reduce using rule 14 (opt_initializer)


State 55

   78 expression: lvalue • '?'
   93           | lvalue • '=' expression
   94           | lvalue •

    '='  shift, and go to state 87
    '?'  shift, and go to state 88

    $default  reduce using rule 94 (expression)


State 56

   18 func_decl: data_type tIDENTIFIER '(' args • ')'
   24 func_def: data_type tIDENTIFIER '(' args • ')' def_ret_val body
   26         | data_type tIDENTIFIER '(' args • ')' body
   31 args: args • ',' arg

    ')'  shift, and go to state 89
    ','  shift, and go to state 61


State 57

   17 func_decl: data_type '*' tIDENTIFIER '(' • args ')'
   23 func_def: data_type '*' tIDENTIFIER '(' • args ')' def_ret_val body
   25         | data_type '*' tIDENTIFIER '(' • args ')' body

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 29 (args)

    args       go to state 90
    arg        go to state 34
    data_type  go to state 35


State 58

    6 variable: data_type '*' tIDENTIFIER opt_initializer •

    $default  reduce using rule 6 (variable)


State 59

   19 func_decl: data_type '?' tIDENTIFIER '(' • args ')'

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 29 (args)

    args       go to state 91
    arg        go to state 34
    data_type  go to state 35


State 60

   21 func_decl: tTYPE_VOID tIDENTIFIER '(' args ')' •
   28 func_def: tTYPE_VOID tIDENTIFIER '(' args ')' • body

    tEPILOGUE  shift, and go to state 92
    '@'        shift, and go to state 93
    '{'        shift, and go to state 94

    $default  reduce using rule 21 (func_decl)

    body      go to state 95
    prologue  go to state 96
    epilogue  go to state 97
    block     go to state 98


State 61

   31 args: args ',' • arg

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    arg        go to state 99
    data_type  go to state 35


State 62

   32 arg: data_type tIDENTIFIER •

    $default  reduce using rule 32 (arg)


State 63

   20 func_decl: tTYPE_VOID '*' tIDENTIFIER '(' args • ')'
   27 func_def: tTYPE_VOID '*' tIDENTIFIER '(' args • ')' body
   31 args: args • ',' arg

    ')'  shift, and go to state 100
    ','  shift, and go to state 61


State 64

   22 func_decl: tTYPE_VOID '?' tIDENTIFIER '(' args • ')'
   31 args: args • ',' arg

    ')'  shift, and go to state 101
    ','  shift, and go to state 61


State 65

   98 expression: tSIZEOF '(' • expression ')'

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 102
    lvalue      go to state 55


State 66

   95 expression: tIDENTIFIER '(' • ')'
   96           | tIDENTIFIER '(' • expressions ')'

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    ')'          shift, and go to state 103
    '@'          shift, and go to state 49

    literal      go to state 50
    integer      go to state 51
    float        go to state 52
    string       go to state 53
    expression   go to state 104
    expressions  go to state 105
    lvalue       go to state 55


State 67

   79 expression: expression • '*' expression
   80           | expression • '/' expression
   81           | expression • '%' expression
   82           | expression • '+' expression
   83           | expression • '-' expression
   84           | expression • '<' expression
   85           | expression • '>' expression
   86           | expression • tLE expression
   87           | expression • tGE expression
   88           | expression • tEQ expression
   89           | expression • tNE expression
   90           | '~' expression •
   91           | expression • tAND expression
   92           | expression • tOR expression
  102 lvalue: expression • '[' expression ']'

    tGE  shift, and go to state 73
    tLE  shift, and go to state 74
    tEQ  shift, and go to state 75
    tNE  shift, and go to state 76
    '<'  shift, and go to state 79
    '>'  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '%'  shift, and go to state 85
    '['  shift, and go to state 86

    $default  reduce using rule 90 (expression)


State 68

   76 expression: '+' expression •
   79           | expression • '*' expression
   80           | expression • '/' expression
   81           | expression • '%' expression
   82           | expression • '+' expression
   83           | expression • '-' expression
   84           | expression • '<' expression
   85           | expression • '>' expression
   86           | expression • tLE expression
   87           | expression • tGE expression
   88           | expression • tEQ expression
   89           | expression • tNE expression
   91           | expression • tAND expression
   92           | expression • tOR expression
  102 lvalue: expression • '[' expression ']'

    '['  shift, and go to state 86

    $default  reduce using rule 76 (expression)


State 69

   77 expression: '-' expression •
   79           | expression • '*' expression
   80           | expression • '/' expression
   81           | expression • '%' expression
   82           | expression • '+' expression
   83           | expression • '-' expression
   84           | expression • '<' expression
   85           | expression • '>' expression
   86           | expression • tLE expression
   87           | expression • tGE expression
   88           | expression • tEQ expression
   89           | expression • tNE expression
   91           | expression • tAND expression
   92           | expression • tOR expression
  102 lvalue: expression • '[' expression ']'

    '['  shift, and go to state 86

    $default  reduce using rule 77 (expression)


State 70

   75 expression: '[' expression • ']'
   79           | expression • '*' expression
   80           | expression • '/' expression
   81           | expression • '%' expression
   82           | expression • '+' expression
   83           | expression • '-' expression
   84           | expression • '<' expression
   85           | expression • '>' expression
   86           | expression • tLE expression
   87           | expression • tGE expression
   88           | expression • tEQ expression
   89           | expression • tNE expression
   91           | expression • tAND expression
   92           | expression • tOR expression
  102 lvalue: expression • '[' expression ']'

    tGE   shift, and go to state 73
    tLE   shift, and go to state 74
    tEQ   shift, and go to state 75
    tNE   shift, and go to state 76
    tAND  shift, and go to state 77
    tOR   shift, and go to state 78
    '<'   shift, and go to state 79
    '>'   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '%'   shift, and go to state 85
    '['   shift, and go to state 86
    ']'   shift, and go to state 106


State 71

   74 expression: '(' expression • ')'
   79           | expression • '*' expression
   80           | expression • '/' expression
   81           | expression • '%' expression
   82           | expression • '+' expression
   83           | expression • '-' expression
   84           | expression • '<' expression
   85           | expression • '>' expression
   86           | expression • tLE expression
   87           | expression • tGE expression
   88           | expression • tEQ expression
   89           | expression • tNE expression
   91           | expression • tAND expression
   92           | expression • tOR expression
  102 lvalue: expression • '[' expression ']'

    tGE   shift, and go to state 73
    tLE   shift, and go to state 74
    tEQ   shift, and go to state 75
    tNE   shift, and go to state 76
    tAND  shift, and go to state 77
    tOR   shift, and go to state 78
    '<'   shift, and go to state 79
    '>'   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '%'   shift, and go to state 85
    '['   shift, and go to state 86
    ')'   shift, and go to state 107


State 72

   72 string: string tSTRING •

    $default  reduce using rule 72 (string)


State 73

   87 expression: expression tGE • expression

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 108
    lvalue      go to state 55


State 74

   86 expression: expression tLE • expression

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 109
    lvalue      go to state 55


State 75

   88 expression: expression tEQ • expression

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 110
    lvalue      go to state 55


State 76

   89 expression: expression tNE • expression

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 111
    lvalue      go to state 55


State 77

   91 expression: expression tAND • expression

    tSIZEOF      shift, and go to state 38
    tINTEGER     shift, and go to state 39
    tFLOAT       shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tSTRING      shift, and go to state 42
    tNULL        shift, and go to state 43
    '~'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '@'          shift, and go to state 49

    literal     go to state 50
    integer     go to state 51
    float       go to state 52
    string      go to state 53
    expression  go to state 112
    lvalue      go to state 55


State 78

   92 expression: expression tOR • expression
